--- a/Portifólio/style.css
+++ b/Portifólio/style.css
@@ -46,3 +46,71 @@ body {
 .card a:hover::before, .card a:hover::after {
     opacity: 1;
 }
+footer {
+    padding: 0.5rem 1rem;
+    font-size: 0.85rem;
+}
+footer ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+footer a {
+    color: inherit;
+    text-decoration: none;
+}
+footer a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+main {
+    margin-top: 2rem;
+    padding: 2rem;
+}
+.indent {
+    text-indent: 1.5rem;
+}
+
+@media screen and (min-width: 992px) {
+    
+    body {
+        padding-top: 0;
+        padding-left: 33.33%;
+    }
+    #sideNav {
+        top: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        width: 33.33%;
+        height: 100vh;
+        background-image: url(images/overlay.png), url(images/bg.jpg);
+        background-attachment: scroll;
+        background-position: top left;
+        background-repeat: repeat, no-repeat;
+        background-size: auto, auto 100%;
+        color: rgba(255, 255, 255, .5);
+        text-align: center;
+    }
+    .img-profile {
+        max-width: 100%;
+        max-height: auto;
+        margin: 2.5rem auto;
+    }
+    #sideNav .navbar-collapse {
+        display: flex;
+        align-items: flex-start;
+        width: 100%;
+        margin-bottom: auto;
+    }
+    #sideNav .navbar-nav {
+        margin-top: 3.5rem;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    main{
+        padding: 0 2rem;
+        margin-top: 0;
+    }
+}
