--- a/Portifólio/style.css
+++ b/Portifólio/style.css
@@ -88,7 +88,7 @@ main {
         background-attachment: scroll;
         background-position: top left;
         background-repeat: repeat, no-repeat;
-        background-size: auto, auto 100%;
+        background-size: auto, cover;
         color: rgba(255, 255, 255, .5);
         text-align: center;
     }
@@ -110,7 +110,15 @@ main {
         width: 100%;
     }
     main{
-        padding: 0 2rem;
+        padding: 2 2rem;
         margin-top: 0;
+    }
+    footer {
+        position: fixed;
+        bottom: 3rem;
+        left: 0;
+        width: 30%;
+        background-color: transparent;
+        z-index: 1031;
     }
 }
